updates to journey based on changelog

--- a/app/views/layinghens/current/eligibility/aviary-pullets/elim-housing-density.html
+++ b/app/views/layinghens/current/eligibility/aviary-pullets/elim-housing-density.html
@@ -15,7 +15,7 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The maximum stocking density for multi-tier pullet housing at the age of 16 weeks is:
+                    To be eligible for grant funding, the maximum stocking density for multi-tier pullet housing at the age of 16 weeks must be within:
                 </p>
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
