--- a/app/views/layinghens/current/eligibility/aviary-pullets/housing-density.html
+++ b/app/views/layinghens/current/eligibility/aviary-pullets/housing-density.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the pullets be housed within the maximum stocking density when they are 16 weeks old?
+    Will the pullets be housed within this maximum stocking density when they are 16 weeks old?
 {% endblock %}
 
 {% block content %}
@@ -20,7 +20,7 @@
             {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        The maximum stocking density for multi-tier pullet housing at the age of 16 weeks is:
+                        To be eligible for grant funding, the maximum stocking density for multi-tier pullet housing at the age of 16 weeks must be within:
                     </p>
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
@@ -40,7 +40,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            html: 'Will the pullets be housed within the maximum stocking density when they are 16 weeks old?',
+                            html: 'Will the pullets be housed within this maximum stocking density when they are 16 weeks old?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
