--- a/app/views/layinghens/current/eligibility/biosecurity/elim-concrete-apron.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/elim-concrete-apron.html
@@ -15,7 +15,11 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The building must be surrounded by a continuous strip of concrete.
+                    The building (and veranda if there is one) must be surrounded by a concrete apron.
+                </p>
+
+                <p>
+                    This should be continuous, unless there needs to be a gap where birds have direct access to pasture.
                 </p>
 
                 <p>
