--- a/app/views/layinghens/current/eligibility/solar/elim-roof-support-for-solar-pv.html
+++ b/app/views/layinghens/current/eligibility/solar/elim-roof-support-for-solar-pv.html
@@ -15,7 +15,7 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The roof must be able to support solar PV panels, allowing for potential use in the future.
+                    The roof of this building must be able to support solar PV panels, allowing for potential use in the future.
                 </p>
 
                 <p>
