--- a/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
+++ b/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
@@ -77,7 +77,7 @@
                     <span class="app-step-nav-related__pretitle">Eligibility</span>
                     </h2>
                     <p>
-                        You do not have to buy and install a solar PV system to be eligible for this grant.
+                        The roof must be able to support solar PV panels, allowing for potential use in the future.
                     </p>
                 </div>
             </div>
