--- a/app/views/layinghens/current/eligibility/veranda/elim-specification.html
+++ b/app/views/layinghens/current/eligibility/veranda/elim-specification.html
@@ -15,15 +15,15 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The veranda must have a:
+                    The veranda must have:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        solid concrete floor
+                        a solid concrete floor
                     </li>
                     <li>
-                        waterproof insulated roof
+                        a waterproof insulated roof
                     </li>
                     <li>
                         a dimmable LED lighting system with a range between 0 lux and 60 lux
