--- a/app/views/layinghens/current/scoring/veranda-requirements.html
+++ b/app/views/layinghens/current/scoring/veranda-requirements.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the veranda have these features?
+    Will the building have a veranda with these features?
 {% endblock %}
 
 {% block content %}
@@ -30,24 +30,40 @@
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
                         <li>
-                            be 4 metres wide or more along the length of the bird housing area, or 30% or more of the size of the indoor bird housing area footprint
-                        </li>
-                        <li>
-                            have a solid concrete floor and waterproof insulated roof
-                        </li>
-                        <li>
-                            have a perimeter wall of more than one metre in height
+                            be at least 4 metres wide along the length of the pullet housing area, or equal to at least 30% of the indoor pullet housing area footprint
                         </li>
                         <li>
                             have a dimmable LED lighting system with a range between 0 lux and 60 lux
                         </li>
                         <li>
-                            have a mesh roller-screen system running underneath the length of the roof, that fits securely against the wall when extended to make the housing biosecure during housing orders
+                            have a solid concrete floor and waterproof insulated roof
+                        </li>
+                        <li>
+                            have a perimeter wall, at least one metre high, that includes a biosecure entrance for cleaning access
+                        </li>
+                        <li>
+                            have closable pop holes in the perimeter wall, unless the veranda forms part of an indoor barn system
                         </li>
                         <li>
                             have closable pop holes in the wall of the main house (unless the veranda forms part of an indoor barn system) that are less than 30cm from the floor level, or access ramps across the entire pop hole
                         <li>
+                            have internal access along the length of the wall of the pullet house through closable pop holes that are at least 35cm high and 40cm wide
+                        </li>
+
+                        <li>
+                            have a total of 2 metres of pop hole openings along the length of the pullet house for every 1,000 pullets in the building
+                        </li>
+
+                        <li>
+                            have all pop holes less than 10cm from the floor level and have access ramps as wide as the pop holes that are higher than 10cm from the floor level
+                        </li>
+
+                        <li>
                             not have perches in front of the pop holes
+                        </li>
+
+                        <li>
+                            have a mesh roller screen running underneath the length of the roof, that fits securely against the wall when you roll it down
                         </li>
                     </ul>
 
