--- a/app/views/layinghens/current/eligibility/veranda/elim-size.html
+++ b/app/views/layinghens/current/eligibility/veranda/elim-size.html
@@ -13,19 +13,15 @@
            <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
             <p>
-                You must add a veranda if you have the required space.
-            </p>
-
-            <p>
                 The veranda must be at least either:
             </p>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    4 metres wide along the length of the hen housing area
+                    4 metres wide along the length of the bird housing area
                 </li>
                 <li>
-                    30% of the indoor hen housing area footprint
+                    30% of the size of the indoor bird housing area footprint
                 </li>
             </ul>
 
