Updates based on changelog

--- a/app/views/layinghens/current/eligibility/common/elim-project-type.html
+++ b/app/views/layinghens/current/eligibility/common/elim-project-type.html
@@ -19,13 +19,13 @@
                 </p>
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
+                            adding a veranda only to an existing laying hen or pullet building
+                        </li>
+                        <li>
                             refurbishing an existing laying hen or pullet building
                         </li>
                         <li>
-                            replacing an existing laying hen or pullet building with a new building
-                        </li>
-                        <li>
-                            adding a veranda to an existing laying hen or pullet building
+                            replacing an entire laying hen or pullet building with a new building
                         </li>
                     </ul>
 
