--- a/app/views/layinghens/current/start-page.html
+++ b/app/views/layinghens/current/start-page.html
@@ -41,13 +41,10 @@
         
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          are a laying hen or pullet farmer
+          are the registered keeper of 1,000 or more laying hens or pullets
         </li>
         <li>
           will do the grant-funded work in England
-        </li>
-         <li>
-          have 1,000 or more laying hens or pullets
         </li>
       </ul>
 
@@ -68,19 +65,32 @@
       </ul>
 
       <p>
-        If you are applying for housing grant funding, you can apply for up to 25% of the estimated costs of buying and installing a solar PV system which produces up to 5 kilowatts (kW) of power capacity per 1,000 birds. 
+        If you are replacing or refurbishing a laying hen building, you must add a veranda if you enough outside space. This must be at least either:
+      </p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          4 metres wide along the length of the hen housing area
+        </li>
+        <li>
+          30% of the indoor hen housing area footprint
+        </li>
+      </ul>
+
+      <p>
+        If you are applying for building project grant funding, you can apply for up to 25% of the estimated costs of buying and installing a solar PV system which produces up to 5 kilowatts (kW) of power capacity per 1,000 birds. 
       </p>
 
       <p>
-        You can apply for grant funding for multiple house or veranda projects. You must submit an application for each project. You cannot apply for grant funding for both housing and veranda projects. 
-      </p>
-
-      <p>
-        The maximum total grant amount each business can apply for is £500,000 for housing projects (including solar PV system costs) or £100,000 for veranda projects. The Rural Payments Agency (RPA) will award the grant funding for verandas on a first come, first served basis.
+        You can apply for grant funding for multiple projects. You must submit an application for each project. You cannot apply for grant funding for both building and veranda-only projects. 
       </p>
       
       <p>
-        For housing projects, the minimum grant is £15,000 (40% of £37,500). For veranda projects, the minimum grant is £5,000 (40% of £12,500). 
+        The maximum total grant amount each business can apply for is £500,000 for building projects (including solar PV system costs) or £100,000 for veranda-only projects. The Rural Payments Agency (RPA) will award the veranda-only grant funding on a first come, first served basis.
+      </p>
+
+      <p>
+        For building projects, the minimum grant is £15,000 (40% of £37,500). For veranda-only projects, the minimum grant is £5,000 (40% of £12,500).
       </p>
 
       {{ govukInsetText ({
